--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "zback",
   "version": "1.0.0",
   "description": "backend for harshz",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon"
   },
   "keywords": [
     "harsh"
   ],
   "author": "Harsh Langeh",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.7"
+  }
 }
