--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,2 @@
 PORT=8000
-MONGODB_URI=mongodb+srv://admin<db_user>:<db_password>@cluster0.z6cby.mongodb.net/
+MONGODB_URI=mongodb+srv://admin<db_user>:<db_password>@cluster0.z6cby.mongodb.net
