--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,11 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://admin<db_user>:<db_password>@cluster0.z6cby.mongodb.net
+CROS_ORIGIN=*
+ACCESS_TOKEN_SECRET=
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=
+REFRESH_TOKEN_EXPIRY=10d
+CLOUDINARY_URL=cloudinary://
+CLOUDINARY_CLOUD_NAME=z
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
